--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
+	<artifactId>microservice-demo-zuul-server</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+	<groupId>com.ms-example</groupId>
 
-<!--
-	<parent>
-		<groupId>com.ewolff</groupId>
-		<artifactId>microservice-demo</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
--->
-
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -50,7 +47,6 @@
 	</build>
 
 
-	<artifactId>microservice-demo-zuul-server</artifactId>
 
 	<dependencies>
 		<dependency>
