--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,20 @@
 		</plugins>
 	</build>
 
-
+    <profiles>
+        <profile>
+            <id>sonar</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- Optional URL to server. Default value is http://localhost:9000 -->
+                <sonar.host.url>
+                  http://13.76.243.188:9000/
+                </sonar.host.url>
+            </properties>
+        </profile>
+     </profiles>
 
 	<dependencies>
 		<dependency>
