--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 				<configuration>
 					<baseImage>ewolff/docker-java</baseImage>
 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+					<cmd>touch ${project.build.finalName}.jar </cmd>
 					<cmd>/usr/bin/java -Xmx400m -Xms400m -jar ${project.build.finalName}.jar</cmd>
 					<entryPoint>/usr/bin/java -Xmx400m -Xms400m -jar ${project.build.finalName}.jar</entryPoint>
 					<resources>
